# fastapi-skeleton

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
api/: main.py
api/config/: cors.py  database.py  docs.py  resources.py  settings.py
api/middlewares/: authenticate.py  logging.py  rate_limit.py
api/models/: user.py
api/routes/: api.py  user.py
api/schemas/: user.py
api/seeders/: run_seeders.py  user_seeder.py
api/services/: helpers.py  user.py
migrations/: env.py
migrations/versions/: 001_create_users_table.py
